Added the Observer pattern solution

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs/ObserverPattern/v15/Server/sqlite3/db.lock
+/.vs/ObserverPattern/v15/Server/sqlite3/storage.ide
+/.vs/ObserverPattern/v15/Server/sqlite3/storage.ide-shm
+/.vs/ObserverPattern/v15/Server/sqlite3/storage.ide-wal
